# shoppergpt-carrefour-ingestion

./: .env.example  .gitignore  README.md  missing_portions.json  pyproject.toml  run.py
data/: XReadME.md  carrefour_navigation.md
ingest/: catalogue.py  categories.py  categorize.py  config.py  db.py  derive.py  embed.py  log.py  menu_step_mapping.py  transform.py
scripts/: missing_portions.py
tests/: test_edge_cases.py  test_mapping.py  test_mapping_detail.py
