[tool.poetry]
name = "shopper-gpt-carrefour-ingest"
version = "0.1.0"
description = "Carrefour Traiteur ETL ingestion pipeline"
authors = ["Redpill"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.17.0"
python-dotenv = "^1.2.2"
tqdm = "^4.67.3"
structlog = "^25.5.0"
openai = "^1.0.0"
pinecone = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
